crates/ty_python_semantic/resources/mdtest/snapshots/1._shadowing.md_-_2._Shadowing_-_4._Implicit_function_sh….snap
---
source: crates/ty_test/src/lib.rs
expression: snapshot
---
---
mdtest name: 1. shadowing.md - 2. Shadowing - 4. Implicit function sh…
mdtest path: crates/ty_python_semantic/resources/mdtest/diagnostics/shadowing.md
---

# Python source files

## mdtest_snippet.py

```
1 | def f(): ...
2 | 
3 | f = 1  # error: [invalid-assignment]
```

# Diagnostics

```
error[invalid-assignment]: Implicit shadowing of function `f`
 --> src/mdtest_snippet.py:3:1
  |
1 | def f(): ...
2 |
3 | f = 1  # error: [invalid-assignment]
  | ^
  |
info: Annotate to make it explicit if this is intentional
info: rule `invalid-assignment` is enabled by default

```
